--- a/report/references.bib
+++ b/report/references.bib
@@ -67,3 +67,13 @@ series = {ICML '99}
   journal = {arXiv preprint arXiv:1707.06347},
   year    = {2017}
 }
+
+@misc{dqn,
+      title={Playing Atari with Deep Reinforcement Learning}, 
+      author={Volodymyr Mnih and Koray Kavukcuoglu and David Silver and Alex Graves and Ioannis Antonoglou and Daan Wierstra and Martin Riedmiller},
+      year={2013},
+      eprint={1312.5602},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/1312.5602}, 
+}
